<resources>

    <string name="app_name">Cardapio</string>
    <string name="escolher">Incluir</string>
    <string name="finalizar_pedido">Pedir</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="acompanhamentos">Acompanhamentos</string>
    <string name="tempo_medio">Tempo médio \nde preparo</string>
    <string name="enviar_pedido">Enviar o pedido</string>
    <string name="enviar_conta">Solicitar a conta</string>
    <string name="call_garcom">Chamar Garçom</string>

</resources>