<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    android:orientation="vertical" >

    <com.login.android.cardapio.view.ActionBar
        android:id="@+id/actionbar"
        style="@style/ActionBar"
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_view_action_bar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textColor="@color/branco"
                android:textSize="20sp" />
        </LinearLayout>
    </com.login.android.cardapio.view.ActionBar>

    <ImageView
        android:id="@+id/fragment_detalhe_item_cardapio_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:minHeight="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/teste" />

    <ScrollView
        android:id="@+id/fragment_detalhe_item_cardapio_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/fragment_detalhe_item_cardapio_text_view_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_fragment_detalhe_item_cardapio"
                android:gravity="center"
                android:singleLine="false"
                android:textColor="#9056852F"
                android:textSize="12sp" />

            <TableLayout
                android:id="@+id/fragment_detalhe_item_cardapio_table_layout_sub_item"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_fragment_detalhe_item_cardapio_table_layout_sub_item"
                android:stretchColumns="1,2,3" >
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"                
                android:gravity="center_vertical|right"
                android:orientation="horizontal"
                android:padding="10dp" >

                <Button
                    android:id="@+id/fragment_detalhe_item_cardapio_button_finalizar_pedido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="#83C900"
                    android:drawableLeft="@drawable/icone_mais"
                    android:drawablePadding="5dp"
                    android:gravity="right"
                    android:padding="5dp"
                    android:text="@string/finalizar_pedido"
                    android:textColor="#385600" />

                <Button
                    android:id="@+id/fragment_detalhe_item_cardapio_button_add_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="#83C900"
                    android:layout_marginLeft="10dp"
                    android:drawableLeft="@drawable/icone_mais"
                    android:drawablePadding="5dp"
                    android:gravity="right"
                    android:padding="5dp"
                    android:text="@string/escolher"
                    android:textColor="#385600" />
            </LinearLayout>

            <TextView
                android:id="@+id/fragment_detalhe_item_cardapio_text_view_lbl_ingredientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:singleLine="false"
                android:text="@string/ingredientes"
                android:textColor="#9056852F"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/fragment_detalhe_item_cardapio_text_view_ingredientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:singleLine="false"
                android:textColor="#75000000"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/fragment_detalhe_item_cardapio_text_view_lbl_acompanhamentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:singleLine="false"
                android:text="@string/acompanhamentos"
                android:textColor="#9056852F"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/fragment_detalhe_item_cardapio_text_view_acompanhamentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:singleLine="false"
                android:textColor="#75000000"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/fragment_detalhe_item_cardapio_text_view_lbl_tempo_preparo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:singleLine="false"
                android:text="@string/tempo_medio"
                android:textColor="#9056852F"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/fragment_detalhe_item_cardapio_text_view_tempo_preparo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:singleLine="false"
                android:textColor="#75000000"
                android:textSize="10sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>